--- a/package.json
+++ b/package.json
@@ -3,12 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.21.0",
+    "clsx": "^1.1.1",
+    "firebase": "^8.0.0",
+    "profile-picture": "git+https://github.com/dsalvagni/react-profile-picture.git",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-dropzone": "^11.2.3",
+    "react-firebase": "^2.2.8",
+    "react-image-crop": "^8.6.6",
+    "react-redux": "^7.2.2",
+    "react-scripts": "3.4.3",
+    "redux": "^4.0.5",
+    "semantic-ui-react": "^2.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
